CREATE TABLE "user" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar(50) UNIQUE NOT NULL,
  "email" varchar(100) UNIQUE NOT NULL,
  "password" varchar(255) NOT NULL,
  "role" varchar(20) NOT NULL DEFAULT 'user',
  "is_active" boolean DEFAULT true,
  "is_email_verified" boolean DEFAULT false,
  "last_login_at" timestamp,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "user_token" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer NOT NULL,
  "token_type" varchar(50) NOT NULL,
  "token_value" varchar(255) NOT NULL,
  "expires_at" timestamp,
  "is_used" boolean DEFAULT false,
  "used_at" timestamp,
  "ip_address" varchar(45),
  "user_agent" text,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "user_profile" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "first_name" varchar(50),
  "last_name" varchar(50),
  "phone_number" varchar(20),
  "date_of_birth" date,
  "avatar_url" varchar(255),
  "bio" text,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "user_security_log" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer,
  "event_type" varchar(50) NOT NULL,
  "ip_address" varchar(45),
  "user_agent" text,
  "metadata" json,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "user_setting" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "enable_2fa" boolean DEFAULT false,
  "login_notifications" boolean DEFAULT true,
  "profile_visibility" varchar(20) DEFAULT 'public',
  "preferences" json,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "country" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "country_name" varchar(100) UNIQUE NOT NULL,
  "country_code" varchar(3) UNIQUE NOT NULL
);

CREATE TABLE "address" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "street_address" varchar(255) NOT NULL,
  "street_address_2" varchar(255),
  "city" varchar(100) NOT NULL,
  "state_province" varchar(100),
  "postal_code" varchar(20) NOT NULL,
  "country_id" integer NOT NULL,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "user_address" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer NOT NULL,
  "address_id" integer NOT NULL,
  "is_default" boolean DEFAULT false,
  "address_type" varchar(20) DEFAULT 'both',
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "category" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "parent_category_id" integer,
  "category_name" varchar(100) NOT NULL,
  "slug" varchar(100) UNIQUE NOT NULL,
  "description" text,
  "is_active" boolean DEFAULT true,
  "display_order" integer DEFAULT 0,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "product" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "category_id" integer NOT NULL,
  "name" varchar(255) NOT NULL,
  "description" text,
  "product_image" varchar(255),
  "sku" varchar(50) UNIQUE,
  "is_published" boolean DEFAULT true,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "product_item" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "product_id" integer NOT NULL,
  "sku" varchar(50) UNIQUE NOT NULL,
  "price" decimal(10,2) NOT NULL,
  "original_price" decimal(10,2),
  "quantity_in_stock" integer NOT NULL DEFAULT 0,
  "product_image" varchar(255),
  "is_active" boolean DEFAULT true,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "user_review" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer NOT NULL,
  "product_id" integer NOT NULL,
  "order_id" integer,
  "rating" integer NOT NULL,
  "title" varchar(200),
  "comment" text,
  "is_verified_purchase" boolean DEFAULT false,
  "is_approved" boolean DEFAULT true,
  "helpful_count" integer DEFAULT 0,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "shopping_cart" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "expires_at" timestamp,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "shopping_cart_item" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "cart_id" integer NOT NULL,
  "product_item_id" integer NOT NULL,
  "quantity" integer NOT NULL DEFAULT 1,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "order_status" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(50) UNIQUE NOT NULL,
  "display_name" varchar(100) NOT NULL,
  "description" text,
  "color" varchar(7),
  "display_order" integer DEFAULT 0
);

CREATE TABLE "shipping_method" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(50) UNIQUE NOT NULL,
  "name" varchar(100) NOT NULL,
  "description" text,
  "price" decimal(10,2) NOT NULL,
  "estimated_days_min" integer NOT NULL,
  "estimated_days_max" integer NOT NULL,
  "is_active" boolean DEFAULT true,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "payment_method" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(50) UNIQUE NOT NULL,
  "method_name" varchar(100) NOT NULL,
  "description" text,
  "is_active" boolean DEFAULT true,
  "processing_fee_percentage" decimal(5,2) DEFAULT 0
);

CREATE TABLE "shop_order" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer NOT NULL,
  "order_number" varchar(50) UNIQUE NOT NULL,
  "subtotal" decimal(10,2) NOT NULL,
  "shipping_cost" decimal(10,2) DEFAULT 0,
  "tax_amount" decimal(10,2) DEFAULT 0,
  "discount_amount" decimal(10,2) DEFAULT 0,
  "final_total" decimal(10,2) NOT NULL,
  "shipping_address_id" integer NOT NULL,
  "shipping_method_id" integer NOT NULL,
  "payment_method_id" integer NOT NULL,
  "order_status_id" integer NOT NULL,
  "tracking_number" varchar(100),
  "notes" text,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "paid_at" timestamp,
  "shipped_at" timestamp,
  "delivered_at" timestamp
);

CREATE TABLE "order_line" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "order_id" integer NOT NULL,
  "product_item_id" integer NOT NULL,
  "quantity" integer NOT NULL,
  "unit_price" decimal(10,2) NOT NULL,
  "total_price" decimal(10,2) NOT NULL,
  "product_name" varchar(255) NOT NULL,
  "product_sku" varchar(50) NOT NULL,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "promotion" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(50) UNIQUE NOT NULL,
  "name" varchar(100) NOT NULL,
  "description" text,
  "discount_type" varchar(20) DEFAULT 'percentage',
  "discount_value" decimal(10,2) NOT NULL,
  "minimum_order_amount" decimal(10,2),
  "max_discount_amount" decimal(10,2),
  "usage_limit" integer,
  "usage_count" integer DEFAULT 0,
  "is_active" boolean DEFAULT true,
  "start_date" timestamp NOT NULL,
  "end_date" timestamp NOT NULL,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP),
  "updated_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "promotion_category" (
  "promotion_id" integer,
  "category_id" integer,
  PRIMARY KEY ("promotion_id", "category_id")
);

CREATE TABLE "variation" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "category_id" integer NOT NULL,
  "name" varchar(100) NOT NULL,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "variation_option" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "variation_id" integer NOT NULL,
  "value" varchar(100) NOT NULL,
  "created_at" timestamp DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "product_configuration" (
  "product_item_id" integer,
  "variation_option_id" integer,
  PRIMARY KEY ("product_item_id", "variation_option_id")
);

CREATE UNIQUE INDEX ON "user" ("email");

CREATE UNIQUE INDEX ON "user" ("username");

CREATE INDEX ON "user" ("role");

CREATE INDEX ON "user_token" ("token_value");

CREATE INDEX ON "user_token" ("user_id", "token_type");

CREATE INDEX ON "user_token" ("expires_at");

CREATE INDEX ON "user_security_log" ("user_id", "event_type");

CREATE INDEX ON "user_security_log" ("created_at");

CREATE UNIQUE INDEX ON "user_address" ("user_id", "address_id");

CREATE INDEX ON "product" ("category_id");

CREATE INDEX ON "product" ("is_published");

CREATE UNIQUE INDEX ON "product" ("sku");

CREATE INDEX ON "product_item" ("product_id");

CREATE INDEX ON "product_item" ("is_active");

CREATE INDEX ON "user_review" ("product_id");

CREATE INDEX ON "user_review" ("user_id");

CREATE UNIQUE INDEX ON "shopping_cart_item" ("cart_id", "product_item_id");

CREATE INDEX ON "shop_order" ("user_id");

CREATE INDEX ON "shop_order" ("order_status_id");

CREATE UNIQUE INDEX ON "shop_order" ("order_number");

CREATE INDEX ON "order_line" ("order_id");

CREATE UNIQUE INDEX ON "promotion" ("code");

CREATE INDEX ON "promotion" ("is_active");

COMMENT ON TABLE "user" IS 'Core user identity - clean 10 fields only';

COMMENT ON COLUMN "user"."role" IS 'user, admin';

COMMENT ON TABLE "user_token" IS 'Centralized token management - extensible design';

COMMENT ON COLUMN "user_token"."token_type" IS 'password_reset, email_verification, api_token, session_token';

COMMENT ON TABLE "user_profile" IS '1-to-1 with user';

COMMENT ON TABLE "user_security_log" IS 'Optional - Audit trail & bruteforce protection';

COMMENT ON COLUMN "user_security_log"."event_type" IS 'login_success, login_failed, password_changed';

COMMENT ON TABLE "user_setting" IS 'Optional - User preferences';

COMMENT ON COLUMN "user_setting"."profile_visibility" IS 'public, private';

COMMENT ON TABLE "country" IS 'Reference table';

COMMENT ON TABLE "user_address" IS 'Junction table - Many-to-Many';

COMMENT ON COLUMN "user_address"."address_type" IS 'shipping, billing, both';

COMMENT ON TABLE "category" IS 'Self-referencing for nested categories';

COMMENT ON COLUMN "product"."is_published" IS 'IMPORTANT for IDOR labs';

COMMENT ON TABLE "user_review" IS 'XSS lab target - comment field';

COMMENT ON COLUMN "user_review"."rating" IS '1-5';

COMMENT ON COLUMN "user_review"."comment" IS 'CRITICAL for XSS labs';

COMMENT ON TABLE "shopping_cart" IS '1-to-1 with user';

COMMENT ON TABLE "order_status" IS 'Reference table: pending, processing, shipped, delivered, cancelled';

COMMENT ON TABLE "shipping_method" IS 'Reference table';

COMMENT ON TABLE "payment_method" IS 'Reference table: credit_card, paypal, cod';

COMMENT ON TABLE "shop_order" IS 'Core order table - pricing breakdown for labs';

COMMENT ON COLUMN "shop_order"."final_total" IS 'IMPORTANT for price manipulation labs';

COMMENT ON TABLE "order_line" IS 'Order items with product snapshot';

COMMENT ON TABLE "promotion" IS 'Logic flaw labs - coupon manipulation';

COMMENT ON COLUMN "promotion"."code" IS 'CRITICAL for coupon bypass labs';

COMMENT ON COLUMN "promotion"."discount_type" IS 'percentage, fixed_amount';

COMMENT ON TABLE "promotion_category" IS 'Junction table - Many-to-Many';

COMMENT ON TABLE "variation" IS 'Optional - Product variation types';

COMMENT ON COLUMN "variation"."name" IS 'Color, Size, Material';

COMMENT ON TABLE "variation_option" IS 'Optional - Variation values';

COMMENT ON COLUMN "variation_option"."value" IS 'Red, Blue, XL, Cotton';

COMMENT ON TABLE "product_configuration" IS 'Optional - Junction table for product variations';

ALTER TABLE "user_token" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "user_profile" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "user_security_log" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "user_setting" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "address" ADD FOREIGN KEY ("country_id") REFERENCES "country" ("id");

ALTER TABLE "user_address" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "user_address" ADD FOREIGN KEY ("address_id") REFERENCES "address" ("id");

ALTER TABLE "category" ADD FOREIGN KEY ("parent_category_id") REFERENCES "category" ("id");

ALTER TABLE "product" ADD FOREIGN KEY ("category_id") REFERENCES "category" ("id");

ALTER TABLE "product_item" ADD FOREIGN KEY ("product_id") REFERENCES "product" ("id");

ALTER TABLE "user_review" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "user_review" ADD FOREIGN KEY ("product_id") REFERENCES "product" ("id");

ALTER TABLE "user_review" ADD FOREIGN KEY ("order_id") REFERENCES "shop_order" ("id");

ALTER TABLE "shopping_cart" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "shopping_cart_item" ADD FOREIGN KEY ("cart_id") REFERENCES "shopping_cart" ("id");

ALTER TABLE "shopping_cart_item" ADD FOREIGN KEY ("product_item_id") REFERENCES "product_item" ("id");

ALTER TABLE "shop_order" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "shop_order" ADD FOREIGN KEY ("shipping_address_id") REFERENCES "address" ("id");

ALTER TABLE "shop_order" ADD FOREIGN KEY ("shipping_method_id") REFERENCES "shipping_method" ("id");

ALTER TABLE "shop_order" ADD FOREIGN KEY ("payment_method_id") REFERENCES "payment_method" ("id");

ALTER TABLE "shop_order" ADD FOREIGN KEY ("order_status_id") REFERENCES "order_status" ("id");

ALTER TABLE "order_line" ADD FOREIGN KEY ("order_id") REFERENCES "shop_order" ("id");

ALTER TABLE "order_line" ADD FOREIGN KEY ("product_item_id") REFERENCES "product_item" ("id");

ALTER TABLE "promotion_category" ADD FOREIGN KEY ("promotion_id") REFERENCES "promotion" ("id");

ALTER TABLE "promotion_category" ADD FOREIGN KEY ("category_id") REFERENCES "category" ("id");

ALTER TABLE "variation" ADD FOREIGN KEY ("category_id") REFERENCES "category" ("id");

ALTER TABLE "variation_option" ADD FOREIGN KEY ("variation_id") REFERENCES "variation" ("id");

ALTER TABLE "product_configuration" ADD FOREIGN KEY ("product_item_id") REFERENCES "product_item" ("id");

ALTER TABLE "product_configuration" ADD FOREIGN KEY ("variation_option_id") REFERENCES "variation_option" ("id");

ALTER TABLE "promotion" ADD FOREIGN KEY ("discount_type") REFERENCES "category" ("id");

ALTER TABLE "product_item" ADD FOREIGN KEY ("product_id") REFERENCES "product_item" ("id");

ALTER TABLE "product_item" ADD FOREIGN KEY ("product_id") REFERENCES "product_item" ("sku");
